area e perimetro.html

--- a/15 COMPITO - AREA PERIMETRO FORME GEOMETRICHE/area e perimetro.html
+++ b/15 COMPITO - AREA PERIMETRO FORME GEOMETRICHE/area e perimetro.html
@@ -182,7 +182,7 @@ canvas {
 
 <body>
 
-<h1>GS Geometry App 💎</h1>
+<h1>Area e Perimetro Forme Geometriche</h1>
 
 <div id="contenitore-input">
   <select id="figura" onchange="mostraInput()">
