--- a/17 COMPITO - MEDIA TRA ELEMENTI/media.html
+++ b/17 COMPITO - MEDIA TRA ELEMENTI/media.html
@@ -156,7 +156,7 @@
 
       // Controllo se ci sono abbastanza numeri
       if (valori.length < 2) {
-        document.getElementById("risultato").textContent = "⚠️ Inserisci almeno 2 numeri validi.";
+        document.getElementById("risultato").textContent = "Inserisci almeno 2 numeri validi.";
         return;
       }
 
