--- a/17 COMPITO - MEDIA TRA ELEMENTI/media.html
+++ b/17 COMPITO - MEDIA TRA ELEMENTI/media.html
@@ -98,7 +98,6 @@
   <div class="contenitore">
     <h2>Calcola la Media</h2>
 
-    <!-- Contenitore dinamico dei campi -->
     <div class="campi" id="contenitoreInput">
       <!-- Input iniziali -->
       <input type="number" placeholder="Valore 1">
@@ -109,12 +108,12 @@
 
     <!-- Bottoni per aggiungere o rimuovere campi -->
     <div class="bottoni">
-      <button onclick="aggiungiCampo()">➕ Aggiungi</button>
-      <button onclick="rimuoviCampo()">➖ Rimuovi</button>
+      <button onclick="aggiungiCampo()"> Aggiungi</button>
+      <button onclick="rimuoviCampo()"> Rimuovi</button>
     </div>
 
     <!-- Bottone per calcolare la media -->
-    <button id="calcolaBtn" onclick="calcolaMedia()">📊 Calcola Media</button>
+    <button id="calcolaBtn" onclick="calcolaMedia()"> Calcola Media</button>
 
     <!-- Output risultato -->
     <p id="risultato"></p>
